--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "andre-website",
   "private": true,
   "version": "0.0.0",
+  "homepage": "http://andrelau123.github.io/andreswebsite",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -24,6 +27,7 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.8",
     "vite": "^5.3.4"
