--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "andre-website",
   "private": true,
   "version": "0.0.0",
-  "homepage": "http://andrelau123.github.io/andreswebsite",
   "type": "module",
+  "homepage": "https://andrelau123.github.io/andreswebsite",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy":"gh-pages -d build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
