--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "homepage": "https://andrelau123.github.io/andreswebsite",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
-    "predeploy": "npm run build",
-    "deploy":"gh-pages -d build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
